Training/lib/k8s/post-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: post-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template: 
    metadata: 
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: technophilefirdous/posttraining:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
